[package]
name = "cc_transaction"
version = "0.9.4"
edition = "2021"
description = "A library for handling cryptocurrency transactions on the Centichain network"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mgharebaghi/cc_transaction"
documentation = "https://docs.rs/cc_transaction"
readme = "README.md"
keywords = ["cryptocurrency", "blockchain", "transactions", "centichain"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
rust_decimal = "^1.35"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sp-core = "^34.0"
serde_with = "^3.9"
rand = "0.8.5"
centichain_keypair = "3.2.3"
sha2 = "^0.10"
chrono = "0.4.38"